tests/ui/type-alias-impl-trait/bound_reduction2.stderr
error[E0792]: expected generic type parameter, found `<T as TraitWithAssoc>::Assoc`
  --> $DIR/bound_reduction2.rs:16:46
   |
LL | type Foo<V> = impl Trait<V>;
   |          - this generic parameter must be used with a generic type parameter
...
LL | fn foo_desugared<T: TraitWithAssoc>(_: T) -> Foo<T::Assoc> {
   |                                              ^^^^^^^^^^^^^

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0792`.
